objects/Course__c/fields/Course_Hours__c.field-meta.xml
<CustomField>
    <fullName>Course_Hours__c</fullName>
    <label>Course Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>