objects/Course__c/fields/Course_Length__c.field-meta.xml
<CustomField>
    <fullName>Course_Length__c</fullName>
    <label>Course Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>