objects/Course__c/listViews/Course_Rates.listView-meta.xml
<ListView>
    <fullName>Course_Rates</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Course_Hours__c</columns>
    <filterScope>Mine</filterScope>
    <label>Course Rates</label>
</ListView>